Fixed button wrapping in smaller windows. No more overflow.

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,12 @@ input:focus {
     outline: none;
 }
 
+.btn {
+    white-space: normal;
+    -ms-word-wrap:;
+    word-wrap: break-word;
+}
+
 button {
     background-color: #677077;
     color: white;
@@ -91,7 +97,7 @@ button:focus {
     width: 100%;
     height: 3em;
     font-size: 1.8em;
-    line-height: 1.5px;
+    line-height: 1;
     font-weight: bold;
 }
 
@@ -104,7 +110,7 @@ button:focus {
     width: 100%;
     height: 3em;
     font-size: 1.8em;
-    line-height: 1.5;
+    line-height: 1;
     font-weight: bold;
 }
 
